tests/e2e/no_effectless_expr7.error
Error: syntax error in story at line 1, column 2

1|    (log info msg: "1")
       ^^^^^^^^^^^^^^^^^

E0161: Effectless expressions without assignment not allowed.
