tests/e2e/no_effectless_expr7.story
(log info msg: "1")
